# learn2slither_42

./: README.md  pyproject.toml
models/: 1000ep.pkl  100ep.pkl  10ep.pkl  1ep.pkl
srcs/: agent.py  apple.py  constants.py  deep_q_network.py  display.py  environment.py  game.py  main.py  snake.py  snakeAI.py  train.py
