[project]
name = "learn2slither-42"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.scripts]
snake = "srcs.main:main"
train = "srcs.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srcs"]
